; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_rtmutex.c_mark_rt_mutex_waiters.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_rtmutex.c_mark_rt_mutex_waiters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt_mutex = type { %struct.task_struct* }
%struct.task_struct = type { i32 }

@RT_MUTEX_HAS_WAITERS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rt_mutex*)* @mark_rt_mutex_waiters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mark_rt_mutex_waiters(%struct.rt_mutex* %0) #0 {
  %2 = alloca %struct.rt_mutex*, align 8
  store %struct.rt_mutex* %0, %struct.rt_mutex** %2, align 8
  %3 = load %struct.rt_mutex*, %struct.rt_mutex** %2, align 8
  %4 = getelementptr inbounds %struct.rt_mutex, %struct.rt_mutex* %3, i32 0, i32 0
  %5 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %6 = ptrtoint %struct.task_struct* %5 to i64
  %7 = load i64, i64* @RT_MUTEX_HAS_WAITERS, align 8
  %8 = or i64 %6, %7
  %9 = inttoptr i64 %8 to %struct.task_struct*
  %10 = load %struct.rt_mutex*, %struct.rt_mutex** %2, align 8
  %11 = getelementptr inbounds %struct.rt_mutex, %struct.rt_mutex* %10, i32 0, i32 0
  store %struct.task_struct* %9, %struct.task_struct** %11, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
